<resources>
    <string name="app_name">Assignment3</string>
    <string name="tv_app_title">Movie Search - OMDB API</string>

    <string name="search_for_movies">Search for Movies</string>
    <string name="enter_movie_title">Enter movie title</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="movie_poster">Movie poster</string>
    <string name="rating">Rating:</string>
    <string name="favourites">Favourites</string>
</resources>